Add karma CI-ready tests

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "9be26e62-ebb0-4a6a-b951-be329545496a"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
