--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   backend:
     build:
       context: backend
-      dockerfile: CarRental/Dockerfile
+      dockerfile: Dockerfile
     ports:
       - "5000:5000"
     environment:
