--- a/backend/CarRental.Infrastructure/CarRental.Infrastructure.csproj
+++ b/backend/CarRental.Infrastructure/CarRental.Infrastructure.csproj
@@ -4,4 +4,14 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-rc.2.20475.6" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0-rc.2.20475.6" />
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\CarRental.Domain\CarRental.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
