--- a/backend/CarRental/appsettings.json
+++ b/backend/CarRental/appsettings.json
@@ -1,4 +1,24 @@
 {
+  "DataBase" : {
+    "Development" : {
+      "Server" : "localhost",
+      "DatabaseName" : "CarRentalApp",
+      "SecretLogin" : "DevelopDB:Login",
+      "SecretPassword" : "DevelopDB:Password"
+    },
+    "DockerCompose" : {
+      "Server" : "sql",
+      "DatabaseName" : "CarRentalApp",
+      "SecretLogin" : "DevelopDB:Login",
+      "SecretPassword" : "DevelopDB:Password"
+    },
+    "Production" : {
+      "Server" : "dotnetrulez-carrentalapp.database.windows.net",
+      "DatabaseName" : "CarRentalAppDatabase",
+      "SecretLogin" : "PROD_SQL_USER",
+      "SecretPassword" : "PROD_SQL_PASSWORD"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
