--- a/azure-pipelines-pr.yml
+++ b/azure-pipelines-pr.yml
@@ -7,9 +7,29 @@ resources:
 - repo: self
 
 variables:
-  tag: '$(Build.BuildId)'
+  major: 1
+  minor: 1
+
+name: $(major).$(minor)$(Rev:.r)
 
 stages:
+- stage:
+  displayName: Build_Branch_Version_Number
+  condition: ne(variables['Build.SourceBranch'], 'refs/heads/master')
+  jobs:
+  - job: Build_Branch_Version_Number
+    variables:
+       prpatch: $[counter(variables['system.pullrequest.pullrequestid'], 0)]
+       brpatch: $[counter(variables['build.sourcebranchname'], 0)]
+    steps:
+      - bash: |
+           echo "##vso[build.updatebuildnumber]$(major).$(minor)-PullRequest.$(prpatch)"
+        condition: eq(variables['Build.Reason'], 'PullRequest')
+        name: SetPRBuildName
+      - bash: |
+           echo "##vso[build.updatebuildnumber]$(major).$(minor)-$(Build.SourceBranchName).$(brpatch)"
+        condition: ne(variables['Build.Reason'], 'PullRequest')
+        name: SetBranchBuildName
 - stage: BuildAndTest
   displayName: 'Build & Test'
   jobs:
