--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,13 +5,23 @@ resources:
 - repo: self
 
 variables:
-  tag: '$(Build.BuildId)'
   major: 1
   minor: 1
 
 name: $(major).$(minor)$(Rev:.r)
 
 stages:
+- stage:
+  displayName: Build_Master_Version_Number
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
+  jobs:
+  - job: Build_Master_Version_Number
+    variables:
+       patch: $[counter(variables['minor'], 0)]
+    steps:
+      - bash: |
+           echo "##vso[build.updatebuildnumber]$(major).$(minor).$(patch)"
+        name: SetMasterBuildName
 - stage:
   displayName: Build_Branch_Version_Number
   condition: ne(variables['Build.SourceBranch'], 'refs/heads/master')
