--- a/backend/CarRental/appsettings.json
+++ b/backend/CarRental/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DataBase" : {
+  "Database" : {
     "Development" : {
       "Server" : "localhost",
       "DatabaseName" : "CarRentalApp",
@@ -18,6 +18,31 @@
       "SecretLogin" : "PROD_SQL_USER",
       "SecretPassword" : "PROD_SQL_PASSWORD"
     }
+  },
+  "AzureAdB2C": {
+    "Development" : {
+      "Instance": "https://dotnetrulezcarrental.onmicrosoft.com",
+      "ClientId": "e24648ec-e7b0-497b-b82f-80e5d521073e",
+      "Domain": "dotnetrulezcarrental.onmicrosoft.com",
+      "SignUpSignInPolicyId": "B2C_1_Dotnetrulez_Car_Rental"
+    },
+    "DockerCompose" : {
+      "Instance": "https://dotnetrulezcarrental.onmicrosoft.com",
+      "ClientId": "e24648ec-e7b0-497b-b82f-80e5d521073e",
+      "Domain": "dotnetrulezcarrental.onmicrosoft.com",
+      "SignUpSignInPolicyId": "B2C_1_Dotnetrulez_Car_Rental"
+    },
+    "Production" : {
+      "Instance": "https://dotnetrulezcarrental.onmicrosoft.com",
+      "ClientId": "01dac09a-3d84-48e6-971e-c53915835d4b",
+      "Domain": "dotnetrulezcarrental.onmicrosoft.com",
+      "SignUpSignInPolicyId": "B2C_1_Dotnetrulez_Car_Rental"
+    }
+  },
+  "Swagger": {
+    "Development" : true,
+    "DockerCompose" : true,
+    "Production" : true
   },
   "Logging": {
     "LogLevel": {
