--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -30,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -61,6 +62,7 @@
               "optimization": false,
               "vendorChunk": true,
               "extractLicenses": false,
+              "aot": false,
               "sourceMap": true,
               "namedChunks": true
             }
@@ -97,6 +99,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
