--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.2.11",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/material": "^12.2.11",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@azure/msal-angular": "^2.0.4",
+    "@azure/msal-browser": "^2.18.0",
+    "@microsoft/microsoft-graph-client": "^3.0.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
