Fix node 17 openssl build errors

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,6 +11,7 @@ COPY ./ /usr/local/app/
 RUN npm install
 
 # Generate the build of the application
+ENV NODE_OPTIONS=--openssl-legacy-provider
 RUN npm run build
 
 
