--- a/backend/CarRental/appsettings.json
+++ b/backend/CarRental/appsettings.json
@@ -21,19 +21,19 @@
   },
   "AzureAdB2C": {
     "Development" : {
-      "Instance": "https://dotnetrulezcarrental.onmicrosoft.com",
+      "Instance": "https://dotnetrulezcarrental.b2clogin.com",
       "ClientId": "e24648ec-e7b0-497b-b82f-80e5d521073e",
       "Domain": "dotnetrulezcarrental.onmicrosoft.com",
       "SignUpSignInPolicyId": "B2C_1_Dotnetrulez_Car_Rental"
     },
     "DockerCompose" : {
-      "Instance": "https://dotnetrulezcarrental.onmicrosoft.com",
+      "Instance": "https://dotnetrulezcarrental.b2clogin.com",
       "ClientId": "e24648ec-e7b0-497b-b82f-80e5d521073e",
       "Domain": "dotnetrulezcarrental.onmicrosoft.com",
       "SignUpSignInPolicyId": "B2C_1_Dotnetrulez_Car_Rental"
     },
     "Production" : {
-      "Instance": "https://dotnetrulezcarrental.onmicrosoft.com",
+      "Instance": "https://dotnetrulezcarrental.b2clogin.com",
       "ClientId": "01dac09a-3d84-48e6-971e-c53915835d4b",
       "Domain": "dotnetrulezcarrental.onmicrosoft.com",
       "SignUpSignInPolicyId": "B2C_1_Dotnetrulez_Car_Rental"
