CRA-67: Display user information in frontend

--- a/backend/CarRental/appsettings.json
+++ b/backend/CarRental/appsettings.json
@@ -24,19 +24,25 @@
       "Instance": "https://dotnetrulezcarrental.b2clogin.com",
       "ClientId": "e24648ec-e7b0-497b-b82f-80e5d521073e",
       "Domain": "dotnetrulezcarrental.onmicrosoft.com",
+      "Secret": "u8I7Q~RrJR5OmTztRkzHPP3jd4UZJ05OaQjO2",
+      "tenantId": "c86be5ce-4cbf-4086-8d66-d55d50619e17",
       "SignUpSignInPolicyId": "B2C_1_Dotnetrulez_Car_Rental"
     },
     "DockerCompose" : {
       "Instance": "https://dotnetrulezcarrental.b2clogin.com",
       "ClientId": "e24648ec-e7b0-497b-b82f-80e5d521073e",
       "Domain": "dotnetrulezcarrental.onmicrosoft.com",
+      "Secret": "u8I7Q~RrJR5OmTztRkzHPP3jd4UZJ05OaQjO2",
+      "tenantId": "c86be5ce-4cbf-4086-8d66-d55d50619e17",
       "SignUpSignInPolicyId": "B2C_1_Dotnetrulez_Car_Rental"
     },
     "Production" : {
       "Instance": "https://dotnetrulezcarrental.b2clogin.com",
       "ClientId": "01dac09a-3d84-48e6-971e-c53915835d4b",
       "Domain": "dotnetrulezcarrental.onmicrosoft.com",
-      "SignUpSignInPolicyId": "B2C_1_Dotnetrulez_Car_Rental"
+      "SignUpSignInPolicyId": "B2C_1_Dotnetrulez_Car_Rental",
+      "Secret": "L527Q~cYsBGmBpucwjm2b.rL4TRmGYu0nE.u7",
+      "tenantId": "c86be5ce-4cbf-4086-8d66-d55d50619e17"
     }
   },
   "Swagger": {
