--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@microsoft/microsoft-graph-client": "^3.0.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "lint": "^0.7.0",
+    "node": "^16.13.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
