--- a/backend/CarRental.Infrastructure/CarRental.Infrastructure.csproj
+++ b/backend/CarRental.Infrastructure/CarRental.Infrastructure.csproj
@@ -8,6 +8,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-rc.2.20475.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0-rc.2.20475.6" />
+        <PackageReference Include="Microsoft.Identity.Client" Version="4.37.0-preview" />
         <PackageReference Include="Microsoft.Graph" Version="4.9.0" />
         <PackageReference Include="Microsoft.Graph.Auth" Version="1.0.0-preview.7" />
         <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
