--- a/backend/CarRental/CarRental.csproj
+++ b/backend/CarRental/CarRental.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-rc.2.20475.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0-rc.2.20475.6" />
+        <PackageReference Include="Microsoft.Identity.Client" Version="4.37.0-preview" />
         <PackageReference Include="Microsoft.Identity.Web" Version="1.19.0-preview" />
         <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
