CRA-68: Refactor car search and redirect cars fetching to api service

--- a/backend/CarRental/appsettings.json
+++ b/backend/CarRental/appsettings.json
@@ -45,6 +45,16 @@
       "tenantId": "c86be5ce-4cbf-4086-8d66-d55d50619e17"
     }
   },
+  "CarProviders": {
+    "DNR": {
+      "Id": "DNR",
+      "Name": "DotnetRulez",
+      "BaseUrl": "https://dotnetrulez-car-rental-api.azurewebsites.net",
+      "Config": {
+        "SecretApiKey": "API_KEY"
+      }
+    }
+  },
   "Swagger": {
     "Development" : true,
     "DockerCompose" : true,
