Fix npm build problem in pipeline

--- a/azure-pipelines-pr.yml
+++ b/azure-pipelines-pr.yml
@@ -70,7 +70,7 @@ stages:
       inputs:
         command: custom
         workingDir: frontend
-        customCommand: 'build'
+        customCommand: run build
     - task: Npm@1
       displayName: 'npm run test'
       inputs:
