CRA-9: Add check price backend

--- a/backend/CarRental/appsettings.json
+++ b/backend/CarRental/appsettings.json
@@ -1,23 +1,9 @@
 {
   "Database" : {
-    "Development" : {
-      "Server" : "localhost",
-      "DatabaseName" : "CarRentalApp",
-      "SecretLogin" : "DevelopDB:Login",
-      "SecretPassword" : "DevelopDB:Password"
-    },
-    "DockerCompose" : {
-      "Server" : "sql",
-      "DatabaseName" : "CarRentalApp",
-      "SecretLogin" : "DevelopDB:Login",
-      "SecretPassword" : "DevelopDB:Password"
-    },
-    "Production" : {
-      "Server" : "PROD_SQL_SERVER",
-      "DatabaseName" : "PROD_SQL_DATABASE",
-      "SecretLogin" : "PROD_SQL_USER",
-      "SecretPassword" : "PROD_SQL_PASSWORD"
-    }
+    "Server" : "SQL_SERVER",
+    "DatabaseName" : "SQL_DATABASE",
+    "Login" : "SQL_USER",
+    "Password" : "SQL_PASSWORD"
   },
   "AzureAdB2C": {
     "Development" : {
@@ -51,7 +37,7 @@
       "Name": "DotnetRulez",
       "BaseUrl": "https://dotnetrulez-car-rental-api.azurewebsites.net",
       "Config": {
-        "SecretApiKey": "API_KEY"
+        "ApiKey": "DNZ_API_KEY"
       }
     }
   },
