--- a/backend/CarRental/Properties/launchSettings.json
+++ b/backend/CarRental/Properties/launchSettings.json
@@ -24,7 +24,12 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DNZ_API_KEY": "ApiDotnetrulez11",
+        "SQL_SERVER": "localhost",
+        "SQL_DATABASE": "CarRentalApp",
+        "SQL_USER": "sa",
+        "SQL_PASSWORD": "Test1234!"
       }
     }
   }
