CRA-40, CRA-9: Add check price & book process

--- a/backend/CarRental.Domain/CarRental.Domain.csproj
+++ b/backend/CarRental.Domain/CarRental.Domain.csproj
@@ -8,4 +8,8 @@
       <Folder Include="Entity" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0-rc.2.20475.5" />
+    </ItemGroup>
+
 </Project>
