--- a/backend/CarRental/appsettings.json
+++ b/backend/CarRental/appsettings.json
@@ -53,5 +53,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "UsePostApiRequests": "USE_POST_API_REQUESTS",
   "AllowedHosts": "*"
 }
