--- a/backend/CarRental/CarRental.csproj
+++ b/backend/CarRental/CarRental.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.16.0" />
     </ItemGroup>
 
     <ItemGroup>
