Fix: fix settings
Related work items: #49

--- a/backend/CarRental/appsettings.json
+++ b/backend/CarRental/appsettings.json
@@ -13,8 +13,8 @@
       "SecretPassword" : "DevelopDB:Password"
     },
     "Production" : {
-      "Server" : "dotnetrulez-carrentalapp.database.windows.net",
-      "DatabaseName" : "CarRentalAppDatabase",
+      "Server" : "PROD_SQL_SERVER",
+      "DatabaseName" : "PROD_SQL_DATABASE",
       "SecretLogin" : "PROD_SQL_USER",
       "SecretPassword" : "PROD_SQL_PASSWORD"
     }
@@ -55,7 +55,6 @@
       }
     }
   },
-  "API_KEY": "ApiDotnetrulez11",
   "Swagger": {
     "Development" : true,
     "DockerCompose" : true,
