--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,13 @@
     "@azure/msal-angular": "^2.0.4",
     "@azure/msal-browser": "^2.18.0",
     "@microsoft/microsoft-graph-client": "^3.0.0",
+    "cypress-mochawesome-reporter": "^2.3.0",
+    "cypress-multi-reporters": "^1.5.0",
+    "junit-report-merger": "^3.0.2",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "lint": "^0.7.0",
+    "mocha": "^9.1.3",
+    "mocha-junit-reporter": "^2.0.2",
     "node": "^16.13.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
