--- a/backend/CarRental/appsettings.json
+++ b/backend/CarRental/appsettings.json
@@ -53,6 +53,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Sendgrid" :
+  {
+    "Api-key": "SENDGRID_API_KEY",
+    "FromAddress": "SENDGRID_FROM_ADDRESS",
+    "FromName": "SENDGRID_FROM_NAME"
+  },
   "UsePostApiRequests": "USE_POST_API_REQUESTS",
   "AllowedHosts": "*"
 }
