--- a/backend/CarRental/appsettings.json
+++ b/backend/CarRental/appsettings.json
@@ -39,6 +39,14 @@
       "Config": {
         "ApiKey": "DNZ_API_KEY"
       }
+    },
+    "OT": {
+      "Id": "OT",
+      "Name": "OtherTeam",
+      "BaseUrl": "https://carrentalapidotnet.azurewebsites.net",
+      "Config": {
+        "ApiKey": "OT_API_KEY"
+      }
     }
   },
   "DNZ_API_KEY": "ApiDotnetrulez11",
