--- a/backend/CarRental/appsettings.json
+++ b/backend/CarRental/appsettings.json
@@ -53,12 +53,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Sendgrid" :
+  "Sendgrid":
   {
     "Api-key": "SENDGRID_API_KEY",
     "FromAddress": "SENDGRID_FROM_ADDRESS",
     "FromName": "SENDGRID_FROM_NAME"
   },
+  "EmailsCron": "EMAILS_CRON",
   "UsePostApiRequests": "USE_POST_API_REQUESTS",
   "AllowedHosts": "*"
 }
