--- a/backend/CarRental.Infrastructure.Test/CarRental.Infrastructure.Test.csproj
+++ b/backend/CarRental.Infrastructure.Test/CarRental.Infrastructure.Test.csproj
@@ -26,4 +26,8 @@
       <ProjectReference Include="..\CarRental.Infrastructure\CarRental.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Adapters\Providers" />
+    </ItemGroup>
+
 </Project>
