--- a/backend/CarRental.Infrastructure/CarRental.Infrastructure.csproj
+++ b/backend/CarRental.Infrastructure/CarRental.Infrastructure.csproj
@@ -5,9 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Cronos" Version="0.7.1" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-rc.2.20475.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0-rc.2.20475.6" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0-rc.2.20475.6" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
         <PackageReference Include="Microsoft.Identity.Client" Version="4.37.0-preview" />
         <PackageReference Include="Microsoft.Graph" Version="4.9.0" />
