refactor: Refactor history and add missing integration tests

--- a/backend/CarRental/appsettings.json
+++ b/backend/CarRental/appsettings.json
@@ -41,6 +41,7 @@
       }
     }
   },
+  "DNZ_API_KEY": "ApiDotnetrulez11",
   "Swagger": {
     "Development" : true,
     "DockerCompose" : true,
