--- a/backend/CarRental/appsettings.json
+++ b/backend/CarRental/appsettings.json
@@ -47,6 +47,18 @@
       "Config": {
         "ApiKey": "OT_API_KEY"
       }
+    },
+    "LEC": {
+      "Id": "LEC",
+      "Name": "Lecturer",
+      "BaseUrl": "https://mini.rentcar.api.snet.com.pl",
+      "Config": {
+        "TokenUrl": "https://indentitymanager.snet.com.pl/connect/token",
+        "Flow": "clientCredentials",
+        "Scope": "MiNI.RentApp.API",
+        "ClientId": "L_CLIENT_ID",
+        "ClientSecret": "L_CLIENT_SECRET"
+      }
     }
   },
   "DNZ_API_KEY": "ApiDotnetrulez11",
