CRA-25: Add return car and upload file endpoints

--- a/backend/CarRental/appsettings.json
+++ b/backend/CarRental/appsettings.json
@@ -70,5 +70,9 @@
   },
   "EmailsCron": "EMAILS_CRON",
   "UsePostApiRequests": "USE_POST_API_REQUESTS",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BlobStorage": {
+    "ConnectionString": "BlobConnectionString",
+    "Container": "car-return-files"
+  }
 }
