--- a/backend/CarRental.Infrastructure/CarRental.Infrastructure.csproj
+++ b/backend/CarRental.Infrastructure/CarRental.Infrastructure.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
         <PackageReference Include="Cronos" Version="0.7.1" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-rc.2.20475.6" />
