--- a/backend/CarRental.Infrastructure/CarRental.Infrastructure.csproj
+++ b/backend/CarRental.Infrastructure/CarRental.Infrastructure.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Microsoft.Graph" Version="4.9.0" />
         <PackageReference Include="Microsoft.Graph.Auth" Version="1.0.0-preview.7" />
         <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
+        <PackageReference Include="PdfSharpCore" Version="1.3.10" />
         <PackageReference Include="SendGrid" Version="9.25.1" />
     </ItemGroup>
 
